--- a/index.html
+++ b/index.html
@@ -40,11 +40,13 @@
 			<h3>Experiencia</h3>
 			<p style="font-weight: bold">Departamento de Administración</p>
 			<p style="font-style: italic">Reject Cargo Solutions SL | Cádiz, España | 2016-Actualmente</p>
-			<ul>
+			<ul style="list-style-type:square;>
 				<li>Responsable del sistema de gestión integrada de calidad ISO 9001:2015</li>
-				<li>Eliminación de No Conformidades Mayores</li>
-				<li>Ampliación del servicio acreditado</li>
-				<li>Adaptación de la norma de la v.2008 a v.2015</li>
+					<ul style="list-style-type:circle;>
+					<li>Eliminación de No Conformidades Mayores</li>
+					<li>Ampliación del servicio acreditado</li>
+					<li>Adaptación de la norma de la v.2008 a v.2015</li>
+					<ul>
 				<li>Responsable de contabilidad interna</li>
 				<li>Efectivo control de costes</li>
 				<li>Análisis de la rentabilidad</li>
