--- a/index.html
+++ b/index.html
@@ -48,18 +48,24 @@
 						<li>Adaptación de la norma de la v.2008 a v.2015</li>
 					</ul>
 				<li>Responsable de contabilidad interna</li>
-				<li>Efectivo control de costes</li>
-				<li>Análisis de la rentabilidad</li>
-				<li>Cumplimiento de objetivos</li>
+					<ul>
+					<li>Efectivo control de costes</li>
+					<li>Análisis de la rentabilidad</li>
+					<li>Cumplimiento de objetivos</li>
+					</ul>
 				<li>Gestión contable</li>
-				<li>Responsable de facturación</li>
-				<li>Gestión y preparación de la contabilidad empresarial</li>
+					<ul>
+					<li>Responsable de facturación</li>
+					<li>Gestión y preparación de la contabilidad empresarial</li>
+					</ul>
 				<li>Gestión integral de la administración</li>
-				<li>LOPD / RGPD</li>
-				<li>LPR / CAE</li>
-				<li>Criminal Compliance</li>
-				<li>Administración de suministros y consumos</li>
-				<li>Archivo</li>
+					<ul>
+					<li>LOPD / RGPD</li>
+					<li>LPR / CAE</li>
+					<li>Criminal Compliance</li>
+					<li>Administración de suministros y consumos</li>
+					<li>Archivo</li>
+					</ul>
 				<li>Atención a clientes y proveedores en español e inglés</li>
 				<li>Gestión de operaciones</li>
 				<li>Auxiliar a gerencia</li>
@@ -68,25 +74,33 @@
 
 			<p style="font-weight: bold">Departamento de Administración</p>
 			<p style="font-style: italic">MacPherson Marine Surveyors | Cádiz, España | 2015-2016</p>
-			<ul>
+			<ul style="list-style-type:square;">
 				<li>Responsable del sistema de gestión integrada de calidad ISO 9001:2015</li>
-				<li>Eliminación de No Conformidades Mayores</li>
+					<ul>
+					<li>Eliminación de No Conformidades Mayores</li>
+					</ul>
 				<li>Análisis de la contabilidad interna</li>
-				<li>Efectivo control de costes</li>
-				<li>Análisis de la rentabilidad</li>
-				<li>Cumplimiento de objetivos</li>
+					<ul>
+					<li>Efectivo control de costes</li>
+					<li>Análisis de la rentabilidad</li>
+					<li>Cumplimiento de objetivos</li>
+					</ul>
 				<li>Gestión contable</li>
-				<li>Responsable de facturación</li>
-				<li>Preparación de la contabilidad empresarial</li>
+					<ul>
+					<li>Responsable de facturación</li>
+					<li>Preparación de la contabilidad empresarial</li>
+					</ul>
 				<li>Gestión de la administración</li>
-				<li>Administración de suministros y consumos</li>
-				<li>Archivo</li>
+					<ul>
+					<li>Administración de suministros y consumos</li>
+					<li>Archivo</li>
+					</ul>
 				<li>Atención a clientes y proveedores en español e inglés</li>
 				<li>Apoyo a las operaciones</li>
 				<li>Auxiliar a gerencia</li>
 			</ul>
 			<h3>Formación complementaria</h3>
-			<ul>
+			<ul style="list-style-type:square;">
 				<li>Curso de preparación y posterior examen para la certificación Project Management Profesional de PMI® (COIIAOC 2020)</li>
 				<li>Module I: Lloyd’s Agency Insurance Market Introductory (Lloyd’s Agency 2018)</li>
 				<li>Curso adaptación a nueva norma de calidad ISO 9001:2015 (Bg-Quality 2017)</li>
